cabal-version:   3.0
name:            control-block
version:         0.0.0
license:         BSD-2-Clause
license-file:    LICENSE
author:          Melanie Phoenix
maintainer:      brown.m@proton.me
category:        Control
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
  ghc-options:        -Wall
  hs-source-dirs:     lib
  default-language:   GHC2021
  default-extensions:
    BlockArguments
    DataKinds
    DefaultSignatures
    DerivingStrategies
    FunctionalDependencies
    LambdaCase
    MultiWayIf
    OverloadedStrings
    PatternSynonyms
    QuasiQuotes
    RecordWildCards
    TypeFamilies
    ViewPatterns

  build-depends:
    , base
    , containers
    , indexed-traversable

  exposed-modules:
    Control.Block
